--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <div class="container">
             <p>Kami berkomitmen untuk solusi digital yang berkelanjutan</p>
-            <img src="../vsc/img/windahkaget.png" alt="Ini apa kek" sytle="max-width: 300px;">
+            <img src="../vsc/img/gusu2.jpg" alt="Ini apa kek" sytle="max-width: 300px;">
         </div>
         
     </main>
